# PixFu_Android_src

./: .gitmodules  README.md  build.gradle  local.properties
lib/: .gitignore  build.gradle
lib/src/main/: AndroidManifest.xml  assets
lib/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  run.cpp
lib/src/main/cpp/app/demo/: DemoEngine.cpp  DemoEngine.h
lib/src/main/cpp/lib/: CMakeLists.txt
lib/src/main/cpp/lib/PixEngine_launcher/: Launcher.cpp  PgeRunner.cpp  PgeRunner.h  Renderer.cpp  Renderer.h  RendererPge.cpp  RendererPge.h  RendererPix.cpp
lib/src/main/cpp/lib/launcher/: GLes3Launcher.cpp  GLes3Launcher.h  Renderer.cpp  Renderer.h  RendererOlc.cpp  RendererOlc.h
lib/src/main/cpp/lib/olcPGE_portable/: CMakeLists.txt
lib/src/main/cpp/lib/olcPGE_portable/src/: olcPGEX_Graphics3D.h  olcPixelGameEngine.h
lib/src/main/cpp/lib/olcPGE_portable/src/arch/android/: android.cpp  android.h  androidapi.h
lib/src/main/cpp/lib/olcPGE_portable/src/arch/android/plugins/: lonescreenkey.cpp  lonescreenkey.h  lonesensor.cpp  lonesensor.h
lib/src/main/cpp/lib/olcPGE_portable/src/arch/apple/: apple.cpp  apple.h
lib/src/main/cpp/lib/olcPGE_portable/src/arch/common/: enginethread.cpp
lib/src/main/cpp/lib/olcPGE_portable/src/arch/linux/: linux.cpp  linux.h
lib/src/main/cpp/lib/olcPGE_portable/src/arch/win32/: windows.cpp  windows.h
lib/src/main/cpp/lib/olcPGE_runner/: PgeRunner.cpp  PgeRunner.h  Renderer.cpp  Renderer.h  RendererPge.cpp  RendererPge.h
lib/src/main/cpp/lib/pixFu_launcher/: Launcher.cpp  Renderer.cpp  Renderer.h  RendererPix.cpp  RendererPix.h
lib/src/main/java/tv/nebular/olcpge/android/pgerunner/: GLES3JNIView.java  NativeGlSurfaceView.java  PgeNativeLib.java  PgeRunner.java
lib/src/main/java/tv/nebular/olcpxe/android/gles3jni/: GLES3JNIActivity.java  GLES3JNILib.java  GLES3JNIView.java
lib/src/main/java/tv/nebular/pixFu/launcher/: NativeGlSurfaceView.java  NativeLauncher.java  Runner.java
lib/src/main/java/tv/nebular/pixengine/android/launcher/: NativeGlSurfaceView.java  NativeLauncher.java  Runner.java
lib/src/main/res/values/: strings.xml
releases/: olcPGE_Android-1.0.0-debug.aar  olcpge_android.aar  pixengine-android.aar
